// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label Label /> it matches the snapshot 1`] = `
<div
  className="Label Label"
>
  hello
</div>
`;

exports[`<Readback /> it matches the snapshot 1`] = `
<div
  className="Label Label"
>
  hello
</div>
`;

exports[`snapshot matches 1`] = `
<div
  className="Label"
>
  hello
</div>
`;
